; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_hdmi.c_hdmi_reg_write_buf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_hdmi.c_hdmi_reg_write_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdmi_context = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hdmi_context*, i64, i32*, i32)* @hdmi_reg_write_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hdmi_reg_write_buf(%struct.hdmi_context* %0, i64 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.hdmi_context*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store %struct.hdmi_context* %0, %struct.hdmi_context** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.hdmi_context*, %struct.hdmi_context** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i64 @hdmi_map_reg(%struct.hdmi_context* %9, i64 %10)
  store i64 %11, i64* %6, align 8
  br label %12

12:                                               ; preds = %25, %4
  %13 = load i32, i32* %8, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %30

15:                                               ; preds = %12
  %16 = load i32*, i32** %7, align 8
  %17 = getelementptr inbounds i32, i32* %16, i32 1
  store i32* %17, i32** %7, align 8
  %18 = load i32, i32* %16, align 4
  %19 = load %struct.hdmi_context*, %struct.hdmi_context** %5, align 8
  %20 = getelementptr inbounds %struct.hdmi_context, %struct.hdmi_context* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* %6, align 8
  %23 = add nsw i64 %21, %22
  %24 = call i32 @writel(i32 %18, i64 %23)
  br label %25

25:                                               ; preds = %15
  %26 = load i32, i32* %8, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %8, align 4
  %28 = load i64, i64* %6, align 8
  %29 = add nsw i64 %28, 4
  store i64 %29, i64* %6, align 8
  br label %12

30:                                               ; preds = %12
  ret void
}

declare dso_local i64 @hdmi_map_reg(%struct.hdmi_context*, i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
